--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
     >
     </seo-calculator>-->
 
-    <script type="module" src="./seo-calculator.js"></script>
+    <script type="module" src="./dist/seo-calculator.min.js"></script>
 </body>
 </html>
