updated the demo colors

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,9 @@
             /* Chart colors (use brand-friendly accents) */
             --chart-onpage: #D8724E;   /* warm accent orange */
             --chart-tech: #DFA07F;     /* peach/tan */
-            --chart-offpage: #CCE2A2;  /* soft green */
+            --chart-offpage: #B5C4C9;  /* soft grey */
+            --chart-reporting: #94A3B8;  /* darker soft grey */
+            /* --chart-offpage: #CCE2A2;  soft green */
 
             /* Fonts */
             --font-family: "Lato", sans-serif;
