updated demo page

--- a/index.html
+++ b/index.html
@@ -1,82 +1,104 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SEO Calculator Demo</title>
 
     <!-- Fake client theme -->
     <style>
         :root {
-            /* Brand Gradient (top = dark, bottom = lighter accent) */
             --brand-top: #013740;
             --brand-bottom: #2B5C64;
 
-            /* Chart colors (use brand-friendly accents) */
-            --chart-onpage: #D8724E;   /* warm accent orange */
-            --chart-tech: #DFA07F;     /* peach/tan */
-            --chart-offpage: #B5C4C9;  /* soft grey */
-            --chart-reporting: #94A3B8;  /* darker soft grey */
+            --chart-onpage: #D8724E;
+            --chart-tech: #DFA07F;
+            --chart-offpage: #B5C4C9;
+            --chart-reporting: #94A3B8;
 
-            /* Fonts */
             --font-family: "Lato", sans-serif;
-            --font-header: "DM Serif Display", serif;
-            --font-subheader: "Montserrat", sans-serif;
 
-            /* Light Mode */
             --bg-light: #F9F9F9;
             --panel-light: #FFFFFF;
             --text-light: #013740;
 
-            /* Dark Mode (brand-appropriate deep tones) */
             --bg-dark: #013740;
             --panel-dark: #2B5C64;
             --text-dark: #F9F9F9;
         }
 
         body {
+            margin: 0;
             font-family: var(--font-family);
             background: var(--bg-light);
             color: var(--text-light);
-            padding: 40px;
+        }
+
+        /* Mimic a CMS page */
+        .page {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 2rem 1.25rem;
+        }
+
+        .content-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .content-section h1 {
+            font-size: 2.25rem;
+            margin-bottom: 1rem;
+        }
+
+        .content-section p {
+            max-width: 70ch;
+            line-height: 1.65;
+            margin-bottom: 1rem;
+        }
+        
+        .calculator-section {
+            margin-top: 3rem;
         }
     </style>
 
     <!-- Client fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;600&display=swap"
+        rel="stylesheet"
+    >
 </head>
 
 <body>
 
-    <!-- Auto Branding -->
-    <seo-calculator theme="system"></seo-calculator>
+    <main class="page">
+        <section class="content-section">
+            <h1>SEO Pricing Calculator</h1>
 
-    <!-- With Custom Branding -->
-    <!--<seo-calculator
-        brand-top="#0e2a59"
-        brand-bottom="#163a7b"
+            <p>
+                SEO pricing should never be a mystery. This calculator helps you
+                estimate realistic monthly and one-time investments based on
+                deliverables that actually move rankings.
+            </p>
 
-        chart-onpage="#00cc66"
-        chart-tech="#ff6a00"
-        chart-offpage="#ffcc00"
+            <p>
+                Adjust content volume, technical SEO, backlinks, and reporting to
+                see how different strategies affect cost. Contract discounts are
+                applied automatically.
+            </p>
 
-        font-family="'Poppins', sans-serif"
+            <p>
+                This tool reflects real agency workflows — not generic packages or
+                inflated marketing numbers.
+            </p>
+        </section>
+    
+        <section class="calculator-section">
+            <seo-calculator theme="system"></seo-calculator>
+        </section>
+    </main>
 
-        bg-light="#ffffff"
-        panel-light="#f8fafc"
-        text-light="#1e293b"
-
-        bg-dark="#0f172a"
-        panel-dark="#1e293b"
-        text-dark="#f1f5f9"
-
-        theme="system"
-
-        button-bg="#1a4b84"
-        button-text="#ffffff"
-    >
-    </seo-calculator>-->
-
-    <script type="module" src="./dist/seo-calculator.min.js"></script>
+    <script src="../dist/seo-calculator.min.js" defer></script>
 </body>
 </html>
