--- a/demo/index.html
+++ b/demo/index.html
@@ -89,8 +89,7 @@
             </p>
 
             <p>
-                This tool reflects real agency workflows — not generic packages or
-                inflated marketing numbers.
+                This is just more random filler
             </p>
         </section>
     
