--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
             </p>
 
             <p>
-                This tool reflects real agency workflows — not generic packages or
-                inflated marketing numbers.
+                This is just more random filler
             </p>
         </section>
     
@@ -99,6 +98,6 @@
         </section>
     </main>
 
-    <script src="../dist/seo-calculator.min.js" defer></script>
+    <script src="./dist/seo-calculator.min.js" defer></script>
 </body>
 </html>
