updated to have an embed version for backlinking

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
     <style>
         :root {
             --brand-top: #013740;
-            --brand-bottom: #2B5C64;
+            --brand-bottom: #013740;
 
             --chart-onpage: #D8724E;
             --chart-tech: #DFA07F;
