updated the layout for the demo

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
             <label>
                 Calculator appearance:
                 <select id="brandingSelect">
-                    <option value="minimal" selected>Minimal</option>
-                    <option value="brand">Brand</option>
+                    <option value="brand" selected>Brand</option>
+                    <option value="minimal">Minimal</option>
                     <option value="off">Off (neutral)</option>
                 </select>
             </label>
 
             <p style="max-width: 60ch; margin-top: 0.75rem; opacity: 0.85;">
                 Branding modes control how the calculator visually integrates with a website.
-                Minimal stays neutral, Brand adopts site styling, and Off removes branding entirely.
+                Brand adopts site styling, Minimal stays neutral, and Off removes branding entirely.
             </p>
         </div>
     </section>
