added link to the embed

--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
                 Branding modes control how the calculator visually integrates with a website.
                 Brand adopts site styling, Minimal stays neutral, and Off removes branding entirely.
             </p>
+
+            <p style="margin-top: 1.5rem; opacity: 0.8;">
+                Want to install this on your site?
+                <a href="demo/embed.html">Get the embed code</a>
+            </p>
+
         </div>
     </section>
 
